# NPC_Workbench

./: .gitignore  .gitmodules  Cargo.toml  README.md  deploy_subgraph.sh
abis/: AgentMemeFactory.json  NibbleFactory.json  NibbleStorage.json
agentmemetest/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
agentmemetest/abis/: AgentMemeFactory.json
agentmemetest/src/: agent-meme-factory.ts
agentmemetest/tests/: agent-meme-factory-utils.ts  agent-meme-factory.test.ts
contracts/: README.md
contracts/src/: AgentMemeAccessControls.sol  AgentMemeData.sol  AgentMemeERC20.sol  AgentMemeFHE.sol  AgentMemeFactory.sol  AgentMemeLibrary.sol  NibbleAccessControls.sol  NibbleAdapters.sol  NibbleAgents.sol  NibbleConditions.sol  NibbleConnectors.sol  NibbleEvaluations.sol  NibbleFHEGates.sol  NibbleFactory.sol  NibbleLibrary.sol  NibbleListeners.sol  NibbleStorage.sol  NibbleWorkflows.sol
contracts/src/MemeWorkflow/: AgentMemeERC20.sol
contracts/storage/: amoy.json
contracts/test/: AgentMemeFactoryTest.t.sol  NibbleFactory.t.sol
nibble_test/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
nibble_test/abis/: NibbleFactory.json
nibble_test/src/: nibble-factory.ts
nibble_test/tests/: nibble-factory-utils.ts  nibble-factory.test.ts
src/: constants.rs  encrypt.rs  ipfs.rs  lib.rs  lit.rs  memeforge.rs  nibble.rs  utils.rs  workflow.rs
src/adapters/: agents.rs  conditions.rs  evaluations.rs  fhe_gates.rs  listeners.rs  mod.rs
src/adapters/connectors/: mod.rs  off_chain.rs  on_chain.rs
src/adapters/links/: conditions.rs  evaluations.rs  fhe_gates.rs  listeners.rs  mod.rs
src/adapters/nodes/: agents.rs  listeners.rs  mod.rs
src/adapters/nodes/connectors/: off_chain.rs  on_chain.rs
src/adaptors/: agents.rs  conditions.rs  evaluations.rs  fhegates.rs  listeners.rs  mod.rs
src/adaptors/connectors/: mod.rs  offchain.rs  onchain.rs
src/tools/: context.rs  history.rs  mod.rs
tests/: agent-meme-workflow.rs
