[package]
name = "nombre_de_tu_crate"
version = "0.1.0"
edition = "2021"
description = "Web3 NPC Workflows from the Agentic Meme Factory."
license = "MIT OR Apache-2.0"
authors = ["Emma-Jane"]
repository = "https://github.com/digitalax/"

[dependencies]
async-trait = "0.1.83"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
ethers = {version ="2.0.14", features = ["abigen", "etherscan"]}
lit-utilities-wasm = "0.1.0"
reqwest = { version = "0.12.9", features = ["json"]}
serde_json = "1.0.132"
tokio = {version ="1.41.1", features = ["full"]}
uuid = { version ="1.11.0", features = ["v4"] }
