[package]
name = "npc_workbench"
version = "0.1.0"
edition = "2021"
description = "Workflows for Agent Memes."
license = "MIT OR Apache-2.0"
authors = ["Emma-Jane"]
repository = "https://github.com/digitalax/npc_workbench"

[dependencies]
arrayref = "0.3.9"
async-trait = "0.1.83"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.38"
dotenv = "0.15.0"
ecies = "0.2.7"
ethers = {version ="2.0.14", features = ["abigen", "etherscan"]}
futures = "0.3.31"
generic-array = "1.1.0"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"]}
rsa = "0.9.6"
serde = "1.0.215"
serde_json = "1.0.132"
sha2 = "0.10.8"
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
tokio = {version ="1.41.1", features = ["full"]}
uuid = { version ="1.11.0", features = ["v4"] }
